# hazelcast-rs

./: .gitignore  Cargo.toml  Readme.md
examples/: simple.rs
hazelcast-rs-proc/: Cargo.toml
hazelcast-rs-proc/src/: lib.rs
src/: build_info.rs  lib.rs  lifecycle_service.rs  main.rs  partition_service.rs
src/client/: mod.rs
src/cluster/: failover.rs  mod.rs  service.rs  view.rs
src/codec/: client_add_cluster_view_listener_codec.rs  client_add_distributed_object_listener_codec.rs  client_add_partition_lost_listener_codec.rs  client_authentication_codec.rs  client_authentication_custom_codec.rs  client_create_proxies_codec.rs  client_create_proxy_codec.rs  client_deploy_classes_codec.rs  client_destroy_proxy_codec.rs  client_fetch_schema_codec.rs  client_get_distributed_objects_codec.rs  client_local_backup_listener_codec.rs  client_ping_codec.rs  client_remove_distributed_object_listener_codec.rs  client_remove_migration_listener_codec.rs  client_remove_partition_lost_listener_codec.rs  client_send_all_schemas_codec.rs  client_statistics_codec.rs  client_trigger_partition_assignment_codec.rs  map_add_entry_listener_codec.rs  map_add_entry_listener_to_key_codec.rs  map_add_entry_listener_to_key_with_predicate_codec.rs  map_add_entry_listener_with_predicate_codec.rs  map_add_index_codec.rs  map_add_interceptor_codec.rs  map_add_near_cache_invalidation_listener_codec.rs  map_add_partition_lost_listener_codec.rs  map_aggregate_codec.rs  map_aggregate_with_predicate_codec.rs  map_clear_codec.rs  map_contains_key_codec.rs  map_contains_value_codec.rs  map_delete_codec.rs  map_entries_with_paging_predicate_codec.rs  map_entries_with_predicate_codec.rs  map_evict_codec.rs  (+78 more)
(+161 files in other folders)
