[package]
name = "hazelcast-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.2.1", features = ["rand", "v4"] }
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.24"
async-recursion = "1.0.0"
chrono = "0.4.22"
anyhow = "1.0.65"
rand = "0.8.5"
event-listener-primitives = "2.0.1"
byteorder = "1.4.3"
bytes = "1.2.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
async-trait-with-sync = "0.1.36"
lazy_static = "1.4.0"
