[package]
name = "hazelcast-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "hazelcast-rs-proc"
]

[dependencies]
uuid = { version = "1.2.1", features = ["rand", "v4"] }
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3.24"
async-recursion = "1.0.0"
chrono = "0.4.22"
anyhow = "1.0.65"
rand = "0.8.5"
event-listener-primitives = "2.0.1"
byteorder = "1.4.3"
bytes = "1.2.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
async-trait-with-sync = "0.1.36"
lazy_static = "1.4.0"
murmur3 = "0.5.2"
derivative = "2.2.0"
hazelcast-rs-proc = { path = "./hazelcast-rs-proc" }
serde = "1.0.152"
serde_json = "1.0.93"
async-actor = {git = "https://github.com/jan-br/async-actor.git"}
async-actor-proc = {git = "https://github.com/jan-br/async-actor.git"}
async-trait = "0.1.64"

[dev-dependencies]
syn = "1.0.107"
syn_derive = "0.1.2"
quote = "1.0.23"
proc-macro2 = "1.0.50"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
async-actor = {git = "https://github.com/jan-br/async-actor.git"}
async-actor-proc = {git = "https://github.com/jan-br/async-actor.git"}
